--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,25 @@
 {
-  "name": "Bảo Hiểm TV Xiaomi Đà Nẵng",
-  "short_name": "BH TV ĐN",
-  "description": "Quản lý ca bảo hành TV Xiaomi - Bảo Hiểm Xã Hội",
+  "name": "Bảo Hành TV Đà Nẵng",
+  "short_name": "BHTV Đà Nẵng",
+  "description": "Ứng dụng quản lý bảo hành TV tại Đà Nẵng",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
-  "background_color": "#f1f5f9",
-  "theme_color": "#17a2b8",
+  "background_color": "#ffffff",
+  "theme_color": "#0056b3",
   "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
