--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,20 @@
 {
-  "name": "Bảo Hành TV Đà Nẵng",
-  "short_name": "BHTV Đà Nẵng",
-  "description": "Ứng dụng quản lý bảo hành TV tại Đà Nẵng",
+  "name": "Bảo Hành TV Xiaomi - Đà Nẵng",
+  "short_name": "BH TV Xiaomi",
   "start_url": "/",
-  "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
   "theme_color": "#0056b3",
-  "orientation": "portrait-primary",
+  "background_color": "#ffffff",
   "icons": [
     {
       "src": "/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     }
   ]
 }
